HomePage: Correct fonts and add gap.

--- a/src/pages/HomePage/style.module.less
+++ b/src/pages/HomePage/style.module.less
@@ -27,6 +27,7 @@
   border-radius: 50%;
   font-family: var(--heading-font);
   font-size: 4rem;
+  gap: 10px;
 
   &Cs {
     width: 239px;
